--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "bu botda siz uzbek reperlarni qo'shiqlarini topishingiz mumkun",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon main.js",
+    "start": "node main.js"
   },
   "repository": {
     "type": "git",
